Fixed header overflow on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -392,7 +392,7 @@ body {
       opacity: 0; } }
 
 .header {
-  width: 100%;
+  width: 100vw;
   height: 60px;
   position: fixed;
   top: 0;
@@ -511,9 +511,7 @@ body {
       background: #797979; }
 
 .content {
-  margin-top: 80px;
-  overflow: hidden;
-  -webkit-overflow-scrolling: touch; }
+  margin-top: 80px; }
   .content .playlist .loader, .content .playlist .song-container, .content .playlist .search-container {
     height: 60px;
     margin-bottom: 10px;
